class Coordinate {
	int x;
	int y;

public:
	Coordinate();
	Coordinate(int, int);
};
